# gRPC

./: .env  .gitignore  manage.py  microservice.MD  test.py
authservice/: apps.py  auth_pb2.py  auth_pb2_grpc.py  handler.py  serializers.py  service.py
client/: grpc_client.py  grpc_product_client.py  order_client.py  product_grpc_client.py
gRPC_Django/: asgi.py  settings.py  urls.py  wsgi.py
handlers/: service_handlers.py
microservices/: asgi.py  settings.py  urls.py  wsgi.py
orderservice/: apps.py  models.py  order_pb2.py  serailizers.py  urls.py  views.py
paymentservice/: models.py  serializers.py  urls.py  views.py
productservice/: apps.py  grpc_server.py  handlers.py  models.py  product_pb2.py  product_pb2_grpc.py  serializers.py  service.py  urls.py  views.py
scripts/: auth_generate_proto.sh  (+4 more)
simple_python_sdk/: README.md  main.py  order_pb2.py  order_pb2_grpc.py  pyproject.toml  saga_pb2.py  saga_pb2_grpc.py  service_base.py
simple_python_sdk/core/: orchestrator.py
simple_python_sdk/core/api/: __init__.py  orchestrator.py
simple_python_sdk/core/client/: client.py
simple_python_sdk/core/clients/: __init__.py  example.py
simple_python_sdk/core/connection/: grpc_connection.py  manager.py  pool.py
simple_python_sdk/core/events/: dispatcher.py  store.py
simple_python_sdk/core/expose/: order_server.py
simple_python_sdk/core/services/example_services/: service.py
simple_python_sdk/core/storage/: memory.py  postgres.py
simple_python_sdk/proto/: order.proto
simple_python_sdk/protos/: saga.proto
simple_python_sdk/utils/: pretty.py
(+61 files in other folders)
