[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grpc_orchestrator"
version = "0.1.0"
authors = [
    {name = "ronsaroeun", email = "bunbunrong993@gmail.com"},
]
description = "gRPC-based Saga Pattern Implementation"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "grpcio>=1.48.0",
    "protobuf>=3.20.0",
    "python-consul>=1.1.0"
]
